added dibull logo

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <meta property="og:title" content="Better View Tourism | Experience Dubai" />
     <meta property="og:description" content="Discover Dubai's best tours and attractions. Best price guarantee, 24/7 support." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/dibull_logo.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@BetterViewAE" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/dibull_logo.png" />
     <link rel="canonical" href="https://betterview.ae" />
+    <link rel="icon" href="/dibull_logo.png" />
   </head>
 
   <body>
